# gameOfLife

./: CMakeLists.txt  README.md  main.cpp
backend/: CMakeLists.txt  backend.cpp  backend.h
frontend/: CMakeLists.txt  frontend.cpp  frontend.h
